// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksByTypeChart no data available should render the no data available message 1`] = `
"<div class=\\"row\\">
  <div class=\\"col-12\\">
    <h3>Type of work</h3>
    <div class=\\"bs-callout bs-callout-info\\">
      <p>There is no data available. Please change your selection.</p>
    </div>
  </div>
</div>"
`;

exports[`TasksByTypeChart with data available should render the loading chart 1`] = `
"<div class=\\"row\\">
  <div class=\\"col-12\\">
    <h3>Type of work</h3>
    <div>
      <p>Showing data for group 'Gitlab Org' from Dec 11, 2019 to Jan 10, 2020</p>
      <tasks-by-type-filters-stub maxlabels=\\"15\\" labels=\\"[object Object],[object Object],[object Object]\\" selectedlabelids=\\"1,2,3\\" subjectfilter=\\"Issue\\"></tasks-by-type-filters-stub>
      <gl-stacked-column-chart-stub data=\\"0,1,2,5,2,3,2,4,1\\" option=\\"[object Object]\\" presentation=\\"stacked\\" groupby=\\"Group 1,Group 2,Group 3\\" xaxistype=\\"category\\" xaxistitle=\\"Date\\" yaxistitle=\\"Number of tasks\\" seriesnames=\\"Cool label,Normal label\\" legendaveragetext=\\"Avg\\" legendmaxtext=\\"Max\\" y-axis-type=\\"value\\"></gl-stacked-column-chart-stub>
    </div>
  </div>
</div>"
`;
